--- a/src/main/resources/templates/fragments/otherreports/empleadoincapacidadreport.html
+++ b/src/main/resources/templates/fragments/otherreports/empleadoincapacidadreport.html
@@ -10,7 +10,7 @@
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-8">
-            <h3>GENERACION DE REPORTE DE EMPLEADOS CON INCAPACIDAD</h3>
+            <h3>GENERACION DE REPORTE DE EMPLEADOS CON HIJOS CON CAPACIDADES ESPECIALES</h3>
             <div>
                 <form class="form-horizontal" id="formreport">
 
