--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -119,8 +119,9 @@
                                 <li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Comisiones <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
 					<ul class="dropdown-menu forAnimate" role="menu">
-						<li><a href="#"></a></li>
-						<li><a href="#"></a></li>
+                                                <li><a href="#" th:href="@{/comisiones/}">Consultar Puestos</a></li>
+                                                <li><a href="#" th:href="@{/comisiones/new/comision}">Crear Puesto</a></li>
+                                                <li><a href="#" th:href="@{/comisiones/reporte/comision}">Reporte Puestos a Caducar</a></li>
 					</ul>
 				</li>
                                 
@@ -167,6 +168,20 @@
 					<ul class="dropdown-menu forAnimate" role="menu">
 						<li><a href="#" th:href="@{/estados/}">Consultar Estados</a></li>
                                                 <li><a href="#" th:href="@{/estados/new/estado}">Crear Estado</a></li>
+                                                
+                                                  
+					</ul>
+				</li>
+                                  <li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Reportes<span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
+					<ul class="dropdown-menu forAnimate" role="menu">
+						<li><a href="#" th:href="@{/otherreports/abogados}">Reporte de Abogados</a></li>
+						<li><a href="#" th:href="@{/otherreports/empleadoincapacidad}">Reporte de Empleados con incapacidad</a></li>
+						<li><a href="#" th:href="@{/otherreports/hijoscapesp}">Reporte de empleados con hijos con capacidades especiales</a></li>
+						<li><a href="#" th:href="@{/otherreports/historial}">Reporte de Historial Laboral</a></li>
+						<li><a href="#" th:href="@{/otherreports/motoristas}">Reporte de Motoristas</a></li>
+						<li><a href="#" th:href="@{/otherreports/notarios}">Reporte de Notarios</a></li>
+						<li><a href="#" th:href="@{/otherreports/renuncias}">Reporte de renuncias</a></li>
                                                 
                                                   
 					</ul>
