--- a/src/main/resources/templates/fragments/comite/comites.html
+++ b/src/main/resources/templates/fragments/comite/comites.html
@@ -15,9 +15,10 @@
                     <h3 align="center">Listado de Comites</h3>
                     <table class="table table-striped">
                         <tr>
+                             <th>Codigo</th>
                             <th>DUI</th>
                             <th>Nit</th>
-<!--                            <th>Codigo</th>-->
+                           
                             <th>Nombre</th>
                             <th>Responsable</th>
                             <th>Descripcion</th>
@@ -30,7 +31,7 @@
 
                         </tr>
                         <tr th:each="comite : ${comites}">
-<!--                            <td th:text="${comite.codigocomite}">Codigo</td>-->
+                            <td th:text="${comite.codigocomite}">Codigo</td>
                             <td th:text="${comite.nombrecomite}">Nombre</td>
                             <td th:text="${comite.dui}">DUI</td>
                             <td th:text="${comite.nit}">NIT</td>
@@ -40,6 +41,7 @@
                             <td th:text="${comite.miembromaximo}">Miembro maximo</td>
                             <td th:text="${comite.fechadesdecomite}">F. desde</td>
                             <td th:text="${comite.fechahastacomite}">fechahastacomite</td>
+<!--                              <td th:text="${codigoempleado.codigoempleado}">fechahastacomite</td>-->
 
                             <td><a th:href="${'./show/' + comite.codigocomite}" class="btn btn-default">Mostrar</a>
                             <a th:href="${'./edit/' + comite.codigocomite}" class="btn btn-default">Edit</a>
