--- a/src/main/resources/templates/fragments/estado/estadoform.html
+++ b/src/main/resources/templates/fragments/estado/estadoform.html
@@ -34,26 +34,7 @@
                     <input type="text" class="form-control" th:field="*{valorestado}"/>
                 </div>
             </div>
-            
-<!--            <div class="form-group">
-                <label class="col-sm-2 control-label">Fecha ingreso:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{fechaingreso}"/>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">fecha de caducidad:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{fechacaducidad}"/>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">fecha de baja:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{fechabaja}"/>
-                </div>
-            </div>-->
-
+      
            <div class="col-md-12">
             <div class="row" align="center">
                 <button type="button" class="btn btn-default"><a href="#" th:href="@{/estados/}">Regresar</a></button>
@@ -70,4 +51,26 @@
    
 
 </body>
+<script th:inline="javascript">
+    $(document).ready(function () {
+    if ([[${msg}]] === 0){
+    swal({
+    title: "Exito!",
+            text: "Registro agregado correctamente",
+            type: "success"
+    }).then(function() {
+    location.href = '../estados/';
+    });
+    }
+
+    if ([[${msg}]] === 1){
+    swal({
+    title: "ERROR!",
+            text: "Ocurrio un error en el proceso",
+            type: "error"
+    });
+    }
+    });</script> 
+<script>th:href = "@{/css/bootstrap.min.css}" / ></script>
+<script>th:href = "@{/css/jquery-ui.min.css}" / ></script>
 </html>
