--- a/src/main/resources/templates/fragments/comite/comitesreport.html
+++ b/src/main/resources/templates/fragments/comite/comitesreport.html
@@ -14,12 +14,12 @@
             <div>
                 <form class="form-horizontal" id="formcomite">
 
-<!--                    <div class="form-group">
+                    <div class="form-group">
                         <label class="col-sm-3 control-label" >Codigo de comite:</label>
                         <div class="col-sm-8">
                             <input type="text" class="form-control" id="codigo" name="codigo"/>
                         </div>
-                    </div>-->
+                    </div>
                      <div class="form-group">    
                         <label class="col-sm-3 control-label">Fecha Inicial:</label>
                         <div class="col-sm-3">
@@ -51,7 +51,7 @@
             dateFormat: 'yy-mm-dd'
         });
         $('#generar').click(function(){
-            $("#formcomite").attr('action', '../pdf/');
+            $("#formcomite").attr('action', '../pdf/' + $("#codigo").val().toString());
             $("form#formcomite").submit();
             
         });
