--- a/src/main/resources/templates/fragments/estado/estadoshow.html
+++ b/src/main/resources/templates/fragments/estado/estadoshow.html
@@ -2,52 +2,54 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
 
-        <title>SISADMRH</title>
+        <title>SISADMRH-Detalle de costos de capacitacion</title>
     <th:block th:include="../templates/header"></th:block>
 
 
 
 </head>
 <body>
-    <div class="container">
-        <h3  align="center">Datos de estado</h3>
-        <div>
-            <form class="form-horizontal">
+    <div class="row">
+        <div class="col-md-3">
+            <th:block th:include="../templates/menu"></th:block>
+        </div>
+        <div class="col-md-8">
+            <h3 align="center">Consulta de Costos de Capacitaciones</h3>
+            <div>
+                <form class="form-horizontal">
+                    <div class="col-md-6">
+                        
+                        <div class="form-group">
+                            <label class="col-sm-5 control-label">Nombre Estado:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${estado.nombreestado}">Costo por persona</p>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-5 control-label">Valor Estado:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${estado.valorestado}">Cantidad de Personas</p>
+                            </div>
+                        </div>
+                    
 
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">codigo estado</label>
-                    <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${estado.codigoestado}">Estado Id</p></div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">Nombre:</label>
-                    <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${estado.nombreestado}">Nombre de estado</p>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">contraseña:</label>
-                    <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${estado.valorestado}">Valor de estado</p>
-                    </div>
-                </div>
-
-               
+                       
+                    </div> 
 
 
-
-            </form>
-             <div class="col-md-12">
+                </form>
+                <div class="col-md-12">
                     <div class="row" align="center">
-                        <button type="button" class="btn btn-default"><a href="#" th:href="@{/estados/}">Regresar</a></button>
+                        <button type="submit" class="btn btn-default"><a href="#" th:href="@{/estados/}">Regresar</a></button>
 
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="col-md-12">
+            <th:block th:include="../templates/footer"></th:block>
         </div>
     </div>
-    <div class="col-md-12">
-        <th:block th:include="../templates/footer"></th:block>
-    </div>   
 
 </body>
 </html>
