--- a/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadform.html
+++ b/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadform.html
@@ -16,12 +16,12 @@
     <div>
         <form class="form-horizontal" th:object="${nivelescolaridad}" th:action="@{../nivelescolaridad}" method="post">
           
-            <div class="form-group">
+<!--            <div class="form-group">
                 <label class="col-sm-2 control-label">Codigo de nivel escolaridad:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" th:field="*{codigonivelnivelescolaridad}"/>
                 </div>
-            </div>
+            </div>-->
             <div class="form-group">
                 <label class="col-sm-2 control-label">Nombre de Centro educativo:</label>
                 <div class="col-sm-10">
@@ -93,6 +93,17 @@
   <div class="col-md-12">
             <th:block th:include="../templates/footer"></th:block>
         </div> 
+    <script>
+    $(document).ready(function () {
+        $('#fechadesdenivelescolaridad').datepicker({
+            dateFormat: 'yy-mm-dd'
+        });
+
+        $('#fechahastanivelescolaridad').datepicker({
+            dateFormat: 'yy-mm-dd'
+        });
+    });
+</script>
 
 </body>
 </html>
