--- a/src/main/webapp/WEB-INF/reports/victor/rpt_comites.jrxml
+++ b/src/main/webapp/WEB-INF/reports/victor/rpt_comites.jrxml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="1ef4d0a4-db8a-4cc6-81ad-b4ec81f2231d">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="1ef4d0a4-db8a-4cc6-81ad-b4ec81f2231d">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="50"/>
+	<property name="ireport.y" value="0"/>
 	<parameter name="FECHAINICIO" class="java.lang.String"/>
-	<parameter name="parameter1" class="java.lang.String"/>
 	<parameter name="FECHAFIN" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
+	<parameter name="CODGIO" class="java.lang.String">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
 	<queryString>
-		<![CDATA[SELECT e.nombreempleado,p.nombrepuesto,c.numeroacuerdocomite,c.nombrecomite,c.fechadesdecomite,c.fechahastacomite FROM empleado e INNER JOIN puesto p on e.codigoempleado=p.codigoempleado INNER JOIN comite c on e.codigoempleado=c.codigoempleado where c.fechadesdecomite >= $P{FECHAINICIO} and c.fechahastacomite <=$P{FECHAFIN}]]>
+		<![CDATA[SELECT count(c.codigocomite) as totalregistros, e.nombreempleado,p.nombrepuesto,c.numeroacuerdocomite,c.nombrecomite,c.fechadesdecomite,c.fechahastacomite FROM empleado e INNER JOIN puesto p on e.codigoempleado=p.codigoempleado INNER JOIN comite c on e.codigoempleado=c.codigoempleado where c.codigocomite=$P{CODGIO} and c.fechahastacomite <= $P{FECHAINICIO} and c.fechadesdecomite <=$P{FECHAINICIO}]]>
 	</queryString>
+	<field name="totalregistros" class="java.lang.Long"/>
 	<field name="nombreempleado" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
@@ -29,6 +32,9 @@
 	<field name="fechahastacomite" class="java.sql.Date">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
+	<variable name="totalregistros_1" class="java.lang.Long" calculation="Sum">
+		<variableExpression><![CDATA[$F{totalregistros}]]></variableExpression>
+	</variable>
 	<group name="nombreempleado">
 		<groupExpression><![CDATA[$F{nombreempleado}]]></groupExpression>
 	</group>
@@ -36,10 +42,10 @@
 		<groupExpression><![CDATA[$F{nombrepuesto}]]></groupExpression>
 	</group>
 	<group name="nombremision">
-		<groupExpression><![CDATA[$F{nombremision}]]></groupExpression>
+		<groupExpression><![CDATA[]]></groupExpression>
 	</group>
 	<group name="objetivomision">
-		<groupExpression><![CDATA[$F{objetivomision}]]></groupExpression>
+		<groupExpression><![CDATA[]]></groupExpression>
 	</group>
 	<background>
 		<band splitType="Stretch"/>
@@ -58,39 +64,43 @@
 				<reportElement x="389" y="50" width="84" height="20" uuid="4029d439-49b0-4518-9158-407c5b425ee8"/>
 				<text><![CDATA[SISADMRH]]></text>
 			</staticText>
-			<textField pattern="dd/MM/yyyy">
-				<reportElement x="681" y="86" width="100" height="20" uuid="defd1f57-b9e1-4411-9a1b-4f605b930187"/>
-				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
-			</textField>
 		</band>
 	</title>
 	<pageHeader>
 		<band height="75" splitType="Stretch">
 			<textField>
-				<reportElement x="675" y="35" width="80" height="20" uuid="50d7697d-bd9e-42e2-829d-5dfaaf1c7d49"/>
+				<reportElement x="631" y="27" width="80" height="20" uuid="50d7697d-bd9e-42e2-829d-5dfaaf1c7d49"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA["Page "+$V{PAGE_NUMBER}+" of"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="755" y="35" width="40" height="20" uuid="d63d0eb3-1543-473d-a0be-53844c71f01f"/>
+				<reportElement x="711" y="27" width="40" height="20" uuid="d63d0eb3-1543-473d-a0be-53844c71f01f"/>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="322" y="7" width="175" height="20" uuid="deab7866-efc6-4654-b9e0-af062f2ca3ce"/>
+				<reportElement x="353" y="7" width="113" height="20" uuid="deab7866-efc6-4654-b9e0-af062f2ca3ce"/>
 				<text><![CDATA[Reporte de Comites]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="251" y="42" width="100" height="20" uuid="1ba3c303-1161-4e5d-8141-8f4747ee1c73"/>
+				<reportElement x="251" y="42" width="60" height="20" uuid="1ba3c303-1161-4e5d-8141-8f4747ee1c73"/>
 				<text><![CDATA[Desde]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="457" y="42" width="100" height="20" uuid="490e45c9-0353-42d5-8b19-b6879e26d467"/>
+				<reportElement x="457" y="42" width="42" height="20" uuid="490e45c9-0353-42d5-8b19-b6879e26d467"/>
 				<text><![CDATA[Hasta]]></text>
 			</staticText>
-			<staticText>
-				<reportElement x="325" y="174" width="100" height="20" uuid="cbec0ed1-8970-442a-af13-0bb74b6b6f36"/>
-				<text><![CDATA[Fecha Desde]]></text>
-			</staticText>
+			<textField pattern="dd/MM/yyyy">
+				<reportElement x="631" y="0" width="118" height="20" uuid="defd1f57-b9e1-4411-9a1b-4f605b930187"/>
+				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="322" y="42" width="100" height="20" uuid="364cbb57-a0b8-4255-a658-25aeb458f389"/>
+				<textFieldExpression><![CDATA[$F{fechadesdecomite}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="510" y="44" width="100" height="20" uuid="a76662d2-b4a5-4c13-932e-19f48fdafe2d"/>
+				<textFieldExpression><![CDATA[$F{fechahastacomite}]]></textFieldExpression>
+			</textField>
 		</band>
 	</pageHeader>
 	<columnHeader>
@@ -165,6 +175,10 @@
 				<reportElement x="19" y="16" width="100" height="20" uuid="b4d2a374-0ef3-492f-99d2-ae1e1d29c79c"/>
 				<text><![CDATA[Total Registros]]></text>
 			</staticText>
+			<textField>
+				<reportElement x="135" y="19" width="100" height="20" uuid="9d34aefe-662c-4776-9f93-d41fb6126116"/>
+				<textFieldExpression><![CDATA[$F{totalregistros}]]></textFieldExpression>
+			</textField>
 		</band>
 	</summary>
 </jasperReport>
