--- a/src/main/resources/templates/fragments/capacitacion/capacitacionform.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitacionform.html
@@ -183,6 +183,8 @@
     </script>
     <script>th:href="@{/css/bootstrap.min.css}" /></script>
 <script>th:href="@{/css/jquery-ui.min.css}" /></script>
-<script th:replace="templates/fragments/capacitacion.js :: javascript"></script>
+<script>th:href="@{/js/validacion_controladores.js}" /></script>
+<script>th:href="@{/js/validacion_controladores2.js}" /></script>
+
 </body>	
 </html>
