--- a/src/main/resources/templates/fragments/rol/rolform.html
+++ b/src/main/resources/templates/fragments/rol/rolform.html
@@ -15,7 +15,7 @@
             <div class="form-group">
                 <label class="col-sm-2 control-label">COdigo de Rol:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{codigorol}"/>
+                    <input type="text" class="form-control " th:field="*{codigorol}"/>
                 </div>
             </div>
             <div class="form-group">
@@ -28,6 +28,12 @@
                 <label class="col-sm-2 control-label">Descripcion de rol:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" th:field="*{descripcionrol}"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">EJEMPLO DE DUI:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="num_dui" />
                 </div>
             </div>
 
