--- a/src/main/resources/templates/fragments/rol/rolform.html
+++ b/src/main/resources/templates/fragments/rol/rolform.html
@@ -51,7 +51,8 @@
        swal({
                 title: "Exito!",
                 text: "Registro agregado correctamente",
-                type: "success"
+                type: "success",
+                icon: "success"
        }).then(function() {
                 location.href = '../roles/';
        }); 
@@ -61,7 +62,8 @@
         swal({
                 title: "ERROR!",
                 text: "Ocurrio un error en el proceso",
-                type: "error"
+                type: "error",
+                icon: "error"
        });
     }
     });
